syntax = "proto3";

package pb;

import "product.proto";

option go_package = "github.com/theme-ce/simple-shop/pb";

message CreateProductRequest {
    string name = 1;
    string description = 2;
    int64 price = 3;
    int64 stock_quantity = 4;
}

message CreateProductResponse {
    Product product = 1;
}